tests/api/reference/negative/02-value-side-effect.asm
fn invalid() -> u64 {
    emit.u8(1)
    return 1
}

const result = invalid()
